# noted

./: .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml  tailwind.config.ts
.cargo/: config.toml
data/: welcome.md
data/lucide/: lucide.css
noted/: Cargo.toml
noted/src/: asset.rs  icon.rs  icons.rs  keymap.rs  main.rs  pane.rs  prelude.rs  system_config.rs  ui.rs  vault.rs
noted/src/markdown/: components.rs  mod.rs  tests.rs
noted/src/markdown/parser/: line.rs  mod.rs  segment.rs
noted/src/markdown/ui/: line.rs  segment.rs
noted/src/optional/: discord.rs  mod.rs
noted/src/theme/: included_color_schemes.rs  mod.rs
noted/src/ui/: file_explorer.rs  information_bar.rs  mod.rs  status_bar.rs
noted/src/ui/components/: clickable.rs  drag_handle.rs  icon_toggle.rs  mod.rs  toggle.rs
noted/src/ui/editor/: mod.rs
noted/src/ui/editor/markdown/: mod.rs  reading_line.rs  segment.rs
noted_macros/: Cargo.toml
noted_macros/src/: lib.rs
src/: app.html  main.rs  message.rs  root-theme.css  system_config.rs  theme.rs  ui.rs  vault.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: settings.ts
src/lib/editor/: Editor.svelte  compiler.ts
src/lib/editor/render/: BlockRender.svelte  ElementRender.svelte  MdRender.svelte
src/lib/editor/render/elements/: Cursor.svelte  Header.svelte  InlineCode.svelte  ListDot.svelte  Mono.svelte  RawText.svelte  Text.svelte
src/routes/: +layout.svelte  +page.svelte
src/theme/: included_color_schemes.rs  mod.rs
