[package]
name = "noted"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
ron = "0.8.1"
keyring = "2.3.2"
dirs = "5.0.1"
log = "0.4.20"
env_logger = "0.9"
chrono = "0.4.34"
lazy_static = "1.4.0"
colorsys = "0.6.7"
rust-embed = { version = "8.0", features = ["include-exclude"] }

gpui = { git = "https://github.com/zed-industries/zed.git", rev = "410c46a5517e397890580c21dab13575e7839d5a" }
lucide-gpui_macros = { path = "../lucide-gpui_macros" }
anyhow = "1.0.80"
ropey = "1.6.1"
